doc/audits/v0.4.0/aderyn-report.md
<!-- ===================== SUMMARY (generated) ===================== -->
# Aderyn report — v0.4.0

- **Tool:** Aderyn 0.6.5
- **Command:** `aderyn -x mocks --output doc/audits/v0.4.0/aderyn-report.md`
- **Scope:** 12 factory contracts (`contracts/`, 413 nSLOC) — **mocks excluded** (`contracts/mocks/` test doubles are not analyzed).
- **Result:** **1 High · 0 Medium · 5 Low · 0 Informational.**

**Nothing exploitable to fix.** H-1 and L-1/L-2/L-4/L-5 are the same false-positive / by-design / environment items triaged in v0.3.0. The one new finding, **L-3 (`nonReentrant` is not the first modifier)**, is a cosmetic best-practice note introduced by the v0.4.0 NM-2 reentrancy guard — it is not a vulnerability (the only preceding modifier, `onlyRole`, makes no external call and cannot re-enter), though reordering the modifiers to `nonReentrant onlyRole(...)` would silence it. See the per-finding reasoning in [`aderyn-report-feedback.md`](./aderyn-report-feedback.md) and the [audit overview](../AUDIT_OVERVIEW.md).

| ID | Severity | Instances | Finding | Assessment |
| --- | --- | --- | --- | --- |
| H-1 | High | 3 | `abi.encodePacked()` hash collision | **False positive** — canonical CREATE2 init-code (`creationCode ++ abi.encode(args)`); not a hash-ambiguity case, and `abi.encode`-ing the whole thing would produce invalid init code |
| L-1 | Low | 6 | Centralization risk | **By design** — deployment is gated by `CMTAT_DEPLOYER_ROLE` (documented AccessControl model) |
| L-2 | Low | 11 | Unspecific pragma (`^0.8.20`) | **By design** — caret pragma for a reusable library; deployment pins `0.8.34` via `hardhat.config.js` |
| L-3 | Low | 5 | `nonReentrant` is not the first modifier | **Cosmetic** — the preceding `onlyRole` performs no external call, so ordering has no security impact; a `nonReentrant onlyRole(...)` reorder is optional and would silence the detector |
| L-4 | Low | 12 | PUSH0 opcode | **Environment** — `evmVersion` is explicitly set (`prague`); PUSH0 support is a per-target-chain deployer choice |
| L-5 | Low | 2 | Unchecked return (`_grantRole`) | **False positive** — OZ pattern; the bool return is informational and ignored during constructor setup |

<!-- ===================== RAW ADERYN OUTPUT ===================== -->

# Aderyn Analysis Report

This report was generated by [Aderyn](https://github.com/Cyfrin/aderyn), a static analysis tool built by [Cyfrin](https://cyfrin.io), a blockchain security company. This report is not a substitute for manual audit or security review. It should not be relied upon for any purpose other than to assist in the identification of potential security vulnerabilities.
# Table of Contents

- [Summary](#summary)
  - [Files Summary](#files-summary)
  - [Files Details](#files-details)
  - [Issue Summary](#issue-summary)
- [High Issues](#high-issues)
  - [H-1: `abi.encodePacked()` Hash Collision](#h-1-abiencodepacked-hash-collision)
- [Low Issues](#low-issues)
  - [L-1: Centralization Risk](#l-1-centralization-risk)
  - [L-2: Unspecific Solidity Pragma](#l-2-unspecific-solidity-pragma)
  - [L-3: `nonReentrant` is Not the First Modifier](#l-3-nonreentrant-is-not-the-first-modifier)
  - [L-4: PUSH0 Opcode](#l-4-push0-opcode)
  - [L-5: Unchecked Return](#l-5-unchecked-return)


# Summary

## Files Summary

| Key | Value |
| --- | --- |
| .sol Files | 12 |
| Total nSLOC | 413 |


## Files Details

| Filepath | nSLOC |
| --- | --- |
| contracts/libraries/CMTATBeaconFactoryBase.sol | 56 |
| contracts/libraries/CMTATFactoryBase.sol | 12 |
| contracts/libraries/CMTATFactoryInvariant.sol | 16 |
| contracts/libraries/CMTATFactoryRoot.sol | 57 |
| contracts/libraries/CMTATTransparentFactoryBase.sol | 55 |
| contracts/libraries/ContractVersion.sol | 14 |
| contracts/libraries/FactoryErrors.sol | 8 |
| contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol | 37 |
| contracts/light/CMTAT_LIGHT_TP_FACTORY.sol | 34 |
| contracts/standard/CMTAT_BEACON_FACTORY.sol | 39 |
| contracts/standard/CMTAT_TP_FACTORY.sol | 36 |
| contracts/standard/CMTAT_UUPS_FACTORY.sol | 49 |
| **Total** | **413** |


## Issue Summary

| Category | No. of Issues |
| --- | --- |
| High | 1 |
| Low | 5 |


# High Issues

## H-1: `abi.encodePacked()` Hash Collision

abi.encodePacked() should not be used with dynamic types when passing the result to a hash function such as `keccak256()`. Use `abi.encode()` instead which will pad items to 32 bytes, preventing hash collisions: https://docs.soliditylang.org/en/v0.8.13/abi-spec.html#non-standard-packed-mode. (e.g. `abi.encodePacked(0x123,0x456)` => `0x123456` => `abi.encodePacked(0x1,0x23456)`, but `abi.encode(0x123,0x456)` => `0x0...1230...456`). Unless there is a compelling reason, `abi.encode` should be preferred. If there is only one argument to `abi.encodePacked()` it can often be cast to `bytes()` or `bytes32()` instead: https://ethereum.stackexchange.com/questions/30912/how-to-compare-strings-in-solidity#answer-82739. If all arguments are strings and or bytes, `bytes.concat()` should be used instead.

<details><summary>3 Found Instances</summary>


- Found in contracts/libraries/CMTATBeaconFactoryBase.sol [Line: 92](../../../contracts/libraries/CMTATBeaconFactoryBase.sol#L92)

	```solidity
	        bytecode = abi.encodePacked(type(BeaconProxy).creationCode, abi.encode(address(beacon), initializerData));
	```

- Found in contracts/libraries/CMTATTransparentFactoryBase.sol [Line: 88](../../../contracts/libraries/CMTATTransparentFactoryBase.sol#L88)

	```solidity
	        bytecode = abi.encodePacked(type(TransparentUpgradeableProxy).creationCode, abi.encode(logic, proxyAdminOwner, initializerData));
	```

- Found in contracts/standard/CMTAT_UUPS_FACTORY.sol [Line: 112](../../../contracts/standard/CMTAT_UUPS_FACTORY.sol#L112)

	```solidity
	        bytecode = abi.encodePacked(type(ERC1967Proxy).creationCode, abi.encode(logic, implementation));
	```

</details>



# Low Issues

## L-1: Centralization Risk

Contracts have owners with privileged rights to perform admin tasks and need to be trusted to not perform malicious updates or drain funds.

<details><summary>6 Found Instances</summary>


- Found in contracts/libraries/CMTATFactoryRoot.sol [Line: 15](../../../contracts/libraries/CMTATFactoryRoot.sol#L15)

	```solidity
	abstract contract CMTATFactoryRoot is AccessControl, ContractVersion, CMTATFactoryInvariant, ReentrancyGuard {
	```

- Found in contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol [Line: 43](../../../contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol#L43)

	```solidity
	    ) public virtual onlyRole(CMTAT_DEPLOYER_ROLE) nonReentrant returns(BeaconProxy cmtat)   {
	```

- Found in contracts/light/CMTAT_LIGHT_TP_FACTORY.sol [Line: 36](../../../contracts/light/CMTAT_LIGHT_TP_FACTORY.sol#L36)

	```solidity
	    ) public virtual onlyRole(CMTAT_DEPLOYER_ROLE) nonReentrant returns(TransparentUpgradeableProxy cmtat)   {
	```

- Found in contracts/standard/CMTAT_BEACON_FACTORY.sol [Line: 54](../../../contracts/standard/CMTAT_BEACON_FACTORY.sol#L54)

	```solidity
	    ) public virtual onlyRole(CMTAT_DEPLOYER_ROLE) nonReentrant returns(BeaconProxy cmtat)   {
	```

- Found in contracts/standard/CMTAT_TP_FACTORY.sol [Line: 45](../../../contracts/standard/CMTAT_TP_FACTORY.sol#L45)

	```solidity
	    ) public virtual onlyRole(CMTAT_DEPLOYER_ROLE) nonReentrant returns(TransparentUpgradeableProxy cmtat)   {
	```

- Found in contracts/standard/CMTAT_UUPS_FACTORY.sol [Line: 43](../../../contracts/standard/CMTAT_UUPS_FACTORY.sol#L43)

	```solidity
	    ) public virtual onlyRole(CMTAT_DEPLOYER_ROLE) nonReentrant returns(ERC1967Proxy cmtat)   {
	```

</details>



## L-2: Unspecific Solidity Pragma

Consider using a specific version of Solidity in your contracts instead of a wide version. For example, instead of `pragma solidity ^0.8.0;`, use `pragma solidity 0.8.0;`

<details><summary>11 Found Instances</summary>


- Found in contracts/libraries/CMTATBeaconFactoryBase.sol [Line: 2](../../../contracts/libraries/CMTATBeaconFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/CMTATFactoryBase.sol [Line: 2](../../../contracts/libraries/CMTATFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/CMTATFactoryInvariant.sol [Line: 2](../../../contracts/libraries/CMTATFactoryInvariant.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/CMTATFactoryRoot.sol [Line: 2](../../../contracts/libraries/CMTATFactoryRoot.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/CMTATTransparentFactoryBase.sol [Line: 2](../../../contracts/libraries/CMTATTransparentFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/ContractVersion.sol [Line: 2](../../../contracts/libraries/ContractVersion.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol [Line: 2](../../../contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/light/CMTAT_LIGHT_TP_FACTORY.sol [Line: 2](../../../contracts/light/CMTAT_LIGHT_TP_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_BEACON_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_BEACON_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_TP_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_TP_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_UUPS_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_UUPS_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-3: `nonReentrant` is Not the First Modifier

To protect against reentrancy in other modifiers, the `nonReentrant` modifier should be the first modifier in the list of modifiers.

<details><summary>5 Found Instances</summary>


- Found in contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol [Line: 43](../../../contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol#L43)

	```solidity
	    ) public virtual onlyRole(CMTAT_DEPLOYER_ROLE) nonReentrant returns(BeaconProxy cmtat)   {
	```

- Found in contracts/light/CMTAT_LIGHT_TP_FACTORY.sol [Line: 36](../../../contracts/light/CMTAT_LIGHT_TP_FACTORY.sol#L36)

	```solidity
	    ) public virtual onlyRole(CMTAT_DEPLOYER_ROLE) nonReentrant returns(TransparentUpgradeableProxy cmtat)   {
	```

- Found in contracts/standard/CMTAT_BEACON_FACTORY.sol [Line: 54](../../../contracts/standard/CMTAT_BEACON_FACTORY.sol#L54)

	```solidity
	    ) public virtual onlyRole(CMTAT_DEPLOYER_ROLE) nonReentrant returns(BeaconProxy cmtat)   {
	```

- Found in contracts/standard/CMTAT_TP_FACTORY.sol [Line: 45](../../../contracts/standard/CMTAT_TP_FACTORY.sol#L45)

	```solidity
	    ) public virtual onlyRole(CMTAT_DEPLOYER_ROLE) nonReentrant returns(TransparentUpgradeableProxy cmtat)   {
	```

- Found in contracts/standard/CMTAT_UUPS_FACTORY.sol [Line: 43](../../../contracts/standard/CMTAT_UUPS_FACTORY.sol#L43)

	```solidity
	    ) public virtual onlyRole(CMTAT_DEPLOYER_ROLE) nonReentrant returns(ERC1967Proxy cmtat)   {
	```

</details>



## L-4: PUSH0 Opcode

Solc compiler version 0.8.20 switches the default target EVM version to Shanghai, which means that the generated bytecode will include PUSH0 opcodes. Be sure to select the appropriate EVM version in case you intend to deploy on a chain other than mainnet like L2 chains that may not support PUSH0, otherwise deployment of your contracts will fail.

<details><summary>12 Found Instances</summary>


- Found in contracts/libraries/CMTATBeaconFactoryBase.sol [Line: 2](../../../contracts/libraries/CMTATBeaconFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/CMTATFactoryBase.sol [Line: 2](../../../contracts/libraries/CMTATFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/CMTATFactoryInvariant.sol [Line: 2](../../../contracts/libraries/CMTATFactoryInvariant.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/CMTATFactoryRoot.sol [Line: 2](../../../contracts/libraries/CMTATFactoryRoot.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/CMTATTransparentFactoryBase.sol [Line: 2](../../../contracts/libraries/CMTATTransparentFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/ContractVersion.sol [Line: 2](../../../contracts/libraries/ContractVersion.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/FactoryErrors.sol [Line: 3](../../../contracts/libraries/FactoryErrors.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol [Line: 2](../../../contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/light/CMTAT_LIGHT_TP_FACTORY.sol [Line: 2](../../../contracts/light/CMTAT_LIGHT_TP_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_BEACON_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_BEACON_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_TP_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_TP_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_UUPS_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_UUPS_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-5: Unchecked Return

Function returns a value but it is ignored. Consider checking the return value.

<details><summary>2 Found Instances</summary>


- Found in contracts/libraries/CMTATFactoryRoot.sol [Line: 34](../../../contracts/libraries/CMTATFactoryRoot.sol#L34)

	```solidity
	        _grantRole(DEFAULT_ADMIN_ROLE, factoryAdmin);
	```

- Found in contracts/libraries/CMTATFactoryRoot.sol [Line: 35](../../../contracts/libraries/CMTATFactoryRoot.sol#L35)

	```solidity
	        _grantRole(CMTAT_DEPLOYER_ROLE, factoryAdmin);
	```

</details>



