doc/audits/v0.5.0/aderyn-report.md
<!-- ===================== SUMMARY (generated) ===================== -->
# Aderyn report — v0.5.0

- **Tool:** Aderyn 0.6.5
- **Command:** `aderyn -x mocks --output doc/audits/v0.5.0/aderyn-report.md`
- **Scope:** 27 factory contracts (`contracts/`, 697 nSLOC) — **mocks excluded** (`contracts/mocks/` test doubles are not analyzed).
- **Result:** **1 High · 0 Medium · 5 Low · 0 Informational.**

**Nothing exploitable to fix.** H-1 and L-1/L-2/L-3/L-5 are the same false-positive / by-design / environment items triaged since v0.3.0. The one new finding, **L-4 Empty Block**, is the intended idiom of the v0.5.0 authorization-hook pattern: an override whose access check rides on its modifier has a deliberately empty body. See the per-finding reasoning in [`aderyn-report-feedback.md`](./aderyn-report-feedback.md) and the [audit overview](../AUDIT_OVERVIEW.md).

| ID | Severity | Instances | Finding | Assessment |
| --- | --- | --- | --- | --- |
| H-1 | High | 3 | `abi.encodePacked()` hash collision | **False positive** — canonical CREATE2 init-code (`creationCode ++ abi.encode(args)`); not a hash-ambiguity case, and `abi.encode`-ing the whole thing would produce invalid init code |
| L-1 | Low | 4 | Centralization risk | **By design** — deployment is gated by a documented policy: `CMTAT_DEPLOYER_ROLE` or a single `Ownable2Step` owner |
| L-2 | Low | 26 | Unspecific pragma (`^0.8.20`) | **By design** — caret pragma for a reusable library; deployment pins `0.8.36` via `hardhat.config.js` |
| L-3 | Low | 27 | PUSH0 opcode | **Environment** — `evmVersion` is explicitly set (`prague`); PUSH0 support is a per-target-chain deployer choice |
| L-4 | Low | 2 | Empty block | **By design (new in v0.5.0)** — the two `_authorizeDeployCMTAT` overrides; the authorization check is carried by the `onlyRole` / `onlyOwner` modifier, so the body is intentionally empty |
| L-5 | Low | 2 | Unchecked return (`_grantRole`) | **False positive** — OZ pattern; the bool return is informational and ignored during constructor setup |

**Scope check:** 0 citations of `node_modules/` or the vendored `CMTAT/` submodule. nSLOC grew 413 → 697 and file count 12 → 27 because v0.5.0 doubles the deployable factories (five `Ownable2Step` variants) and splits the shared code into per-capability modules — not because the analysis scope changed.

<!-- ===================== RAW ADERYN OUTPUT ===================== -->
# Aderyn Analysis Report

This report was generated by [Aderyn](https://github.com/Cyfrin/aderyn), a static analysis tool built by [Cyfrin](https://cyfrin.io), a blockchain security company. This report is not a substitute for manual audit or security review. It should not be relied upon for any purpose other than to assist in the identification of potential security vulnerabilities.
# Table of Contents

- [Summary](#summary)
  - [Files Summary](#files-summary)
  - [Files Details](#files-details)
  - [Issue Summary](#issue-summary)
- [High Issues](#high-issues)
  - [H-1: `abi.encodePacked()` Hash Collision](#h-1-abiencodepacked-hash-collision)
- [Low Issues](#low-issues)
  - [L-1: Centralization Risk](#l-1-centralization-risk)
  - [L-2: Unspecific Solidity Pragma](#l-2-unspecific-solidity-pragma)
  - [L-3: PUSH0 Opcode](#l-3-push0-opcode)
  - [L-4: Empty Block](#l-4-empty-block)
  - [L-5: Unchecked Return](#l-5-unchecked-return)


# Summary

## Files Summary

| Key | Value |
| --- | --- |
| .sol Files | 27 |
| Total nSLOC | 697 |


## Files Details

| Filepath | nSLOC |
| --- | --- |
| contracts/interfaces/ICMTATFactory.sol | 19 |
| contracts/interfaces/IERC173.sol | 9 |
| contracts/interfaces/IERC8303.sol | 4 |
| contracts/libraries/FactoryErrors.sol | 8 |
| contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol | 20 |
| contracts/light/CMTAT_LIGHT_TP_FACTORY.sol | 19 |
| contracts/modules/access/CMTATFactoryAccessControl.sol | 28 |
| contracts/modules/access/CMTATFactoryOwnable2Step.sol | 14 |
| contracts/modules/core/CMTATFactoryBase.sol | 12 |
| contracts/modules/core/CMTATFactoryInvariant.sol | 14 |
| contracts/modules/core/CMTATFactoryRoot.sol | 68 |
| contracts/modules/core/ContractVersion.sol | 12 |
| contracts/modules/deployment/CMTATLightBeaconFactoryBase.sol | 40 |
| contracts/modules/deployment/CMTATLightTPFactoryBase.sol | 38 |
| contracts/modules/deployment/CMTATStandardBeaconFactoryBase.sol | 42 |
| contracts/modules/deployment/CMTATStandardTPFactoryBase.sol | 40 |
| contracts/modules/deployment/CMTATUUPSFactoryBase.sol | 50 |
| contracts/modules/proxy/CMTATBeaconFactoryBase.sol | 56 |
| contracts/modules/proxy/CMTATTransparentFactoryBase.sol | 56 |
| contracts/ownable/CMTAT_BEACON_FACTORY_Ownable2Step.sol | 18 |
| contracts/ownable/CMTAT_LIGHT_BEACON_FACTORY_Ownable2Step.sol | 18 |
| contracts/ownable/CMTAT_LIGHT_TP_FACTORY_Ownable2Step.sol | 17 |
| contracts/ownable/CMTAT_TP_FACTORY_Ownable2Step.sol | 17 |
| contracts/ownable/CMTAT_UUPS_FACTORY_Ownable2Step.sol | 20 |
| contracts/standard/CMTAT_BEACON_FACTORY.sol | 20 |
| contracts/standard/CMTAT_TP_FACTORY.sol | 19 |
| contracts/standard/CMTAT_UUPS_FACTORY.sol | 19 |
| **Total** | **697** |


## Issue Summary

| Category | No. of Issues |
| --- | --- |
| High | 1 |
| Low | 5 |


# High Issues

## H-1: `abi.encodePacked()` Hash Collision

abi.encodePacked() should not be used with dynamic types when passing the result to a hash function such as `keccak256()`. Use `abi.encode()` instead which will pad items to 32 bytes, preventing hash collisions: https://docs.soliditylang.org/en/v0.8.13/abi-spec.html#non-standard-packed-mode. (e.g. `abi.encodePacked(0x123,0x456)` => `0x123456` => `abi.encodePacked(0x1,0x23456)`, but `abi.encode(0x123,0x456)` => `0x0...1230...456`). Unless there is a compelling reason, `abi.encode` should be preferred. If there is only one argument to `abi.encodePacked()` it can often be cast to `bytes()` or `bytes32()` instead: https://ethereum.stackexchange.com/questions/30912/how-to-compare-strings-in-solidity#answer-82739. If all arguments are strings and or bytes, `bytes.concat()` should be used instead.

<details><summary>3 Found Instances</summary>


- Found in contracts/modules/deployment/CMTATUUPSFactoryBase.sol [Line: 121](../../../contracts/modules/deployment/CMTATUUPSFactoryBase.sol#L121)

	```solidity
	        bytecode = abi.encodePacked(type(ERC1967Proxy).creationCode, abi.encode(logic, implementation));
	```

- Found in contracts/modules/proxy/CMTATBeaconFactoryBase.sol [Line: 108](../../../contracts/modules/proxy/CMTATBeaconFactoryBase.sol#L108)

	```solidity
	        bytecode = abi.encodePacked(type(BeaconProxy).creationCode, abi.encode(address(beacon), initializerData));
	```

- Found in contracts/modules/proxy/CMTATTransparentFactoryBase.sol [Line: 107](../../../contracts/modules/proxy/CMTATTransparentFactoryBase.sol#L107)

	```solidity
	        bytecode = abi.encodePacked(type(TransparentUpgradeableProxy).creationCode, abi.encode(logic, proxyAdminOwner, initializerData));
	```

</details>



# Low Issues

## L-1: Centralization Risk

Contracts have owners with privileged rights to perform admin tasks and need to be trusted to not perform malicious updates or drain funds.

<details><summary>4 Found Instances</summary>


- Found in contracts/modules/access/CMTATFactoryAccessControl.sol [Line: 17](../../../contracts/modules/access/CMTATFactoryAccessControl.sol#L17)

	```solidity
	abstract contract CMTATFactoryAccessControl is AccessControl, CMTATFactoryRoot {
	```

- Found in contracts/modules/access/CMTATFactoryAccessControl.sol [Line: 64](../../../contracts/modules/access/CMTATFactoryAccessControl.sol#L64)

	```solidity
	        onlyRole(CMTAT_DEPLOYER_ROLE)
	```

- Found in contracts/modules/access/CMTATFactoryOwnable2Step.sol [Line: 20](../../../contracts/modules/access/CMTATFactoryOwnable2Step.sol#L20)

	```solidity
	abstract contract CMTATFactoryOwnable2Step is Ownable2Step, CMTATFactoryRoot {
	```

- Found in contracts/modules/access/CMTATFactoryOwnable2Step.sol [Line: 43](../../../contracts/modules/access/CMTATFactoryOwnable2Step.sol#L43)

	```solidity
	    function _authorizeDeployCMTAT() internal view virtual override onlyOwner {}
	```

</details>



## L-2: Unspecific Solidity Pragma

Consider using a specific version of Solidity in your contracts instead of a wide version. For example, instead of `pragma solidity ^0.8.0;`, use `pragma solidity 0.8.0;`

<details><summary>26 Found Instances</summary>


- Found in contracts/interfaces/ICMTATFactory.sol [Line: 2](../../../contracts/interfaces/ICMTATFactory.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/interfaces/IERC173.sol [Line: 2](../../../contracts/interfaces/IERC173.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/interfaces/IERC8303.sol [Line: 2](../../../contracts/interfaces/IERC8303.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol [Line: 2](../../../contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/light/CMTAT_LIGHT_TP_FACTORY.sol [Line: 2](../../../contracts/light/CMTAT_LIGHT_TP_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/access/CMTATFactoryAccessControl.sol [Line: 2](../../../contracts/modules/access/CMTATFactoryAccessControl.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/access/CMTATFactoryOwnable2Step.sol [Line: 2](../../../contracts/modules/access/CMTATFactoryOwnable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/core/CMTATFactoryBase.sol [Line: 2](../../../contracts/modules/core/CMTATFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/core/CMTATFactoryInvariant.sol [Line: 2](../../../contracts/modules/core/CMTATFactoryInvariant.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/core/CMTATFactoryRoot.sol [Line: 2](../../../contracts/modules/core/CMTATFactoryRoot.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/core/ContractVersion.sol [Line: 2](../../../contracts/modules/core/ContractVersion.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/deployment/CMTATLightBeaconFactoryBase.sol [Line: 2](../../../contracts/modules/deployment/CMTATLightBeaconFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/deployment/CMTATLightTPFactoryBase.sol [Line: 2](../../../contracts/modules/deployment/CMTATLightTPFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/deployment/CMTATStandardBeaconFactoryBase.sol [Line: 2](../../../contracts/modules/deployment/CMTATStandardBeaconFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/deployment/CMTATStandardTPFactoryBase.sol [Line: 2](../../../contracts/modules/deployment/CMTATStandardTPFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/deployment/CMTATUUPSFactoryBase.sol [Line: 2](../../../contracts/modules/deployment/CMTATUUPSFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/proxy/CMTATBeaconFactoryBase.sol [Line: 2](../../../contracts/modules/proxy/CMTATBeaconFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/proxy/CMTATTransparentFactoryBase.sol [Line: 2](../../../contracts/modules/proxy/CMTATTransparentFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/ownable/CMTAT_BEACON_FACTORY_Ownable2Step.sol [Line: 2](../../../contracts/ownable/CMTAT_BEACON_FACTORY_Ownable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/ownable/CMTAT_LIGHT_BEACON_FACTORY_Ownable2Step.sol [Line: 2](../../../contracts/ownable/CMTAT_LIGHT_BEACON_FACTORY_Ownable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/ownable/CMTAT_LIGHT_TP_FACTORY_Ownable2Step.sol [Line: 2](../../../contracts/ownable/CMTAT_LIGHT_TP_FACTORY_Ownable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/ownable/CMTAT_TP_FACTORY_Ownable2Step.sol [Line: 2](../../../contracts/ownable/CMTAT_TP_FACTORY_Ownable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/ownable/CMTAT_UUPS_FACTORY_Ownable2Step.sol [Line: 2](../../../contracts/ownable/CMTAT_UUPS_FACTORY_Ownable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_BEACON_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_BEACON_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_TP_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_TP_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_UUPS_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_UUPS_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-3: PUSH0 Opcode

Solc compiler version 0.8.20 switches the default target EVM version to Shanghai, which means that the generated bytecode will include PUSH0 opcodes. Be sure to select the appropriate EVM version in case you intend to deploy on a chain other than mainnet like L2 chains that may not support PUSH0, otherwise deployment of your contracts will fail.

<details><summary>27 Found Instances</summary>


- Found in contracts/interfaces/ICMTATFactory.sol [Line: 2](../../../contracts/interfaces/ICMTATFactory.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/interfaces/IERC173.sol [Line: 2](../../../contracts/interfaces/IERC173.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/interfaces/IERC8303.sol [Line: 2](../../../contracts/interfaces/IERC8303.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/libraries/FactoryErrors.sol [Line: 3](../../../contracts/libraries/FactoryErrors.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol [Line: 2](../../../contracts/light/CMTAT_LIGHT_BEACON_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/light/CMTAT_LIGHT_TP_FACTORY.sol [Line: 2](../../../contracts/light/CMTAT_LIGHT_TP_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/access/CMTATFactoryAccessControl.sol [Line: 2](../../../contracts/modules/access/CMTATFactoryAccessControl.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/access/CMTATFactoryOwnable2Step.sol [Line: 2](../../../contracts/modules/access/CMTATFactoryOwnable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/core/CMTATFactoryBase.sol [Line: 2](../../../contracts/modules/core/CMTATFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/core/CMTATFactoryInvariant.sol [Line: 2](../../../contracts/modules/core/CMTATFactoryInvariant.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/core/CMTATFactoryRoot.sol [Line: 2](../../../contracts/modules/core/CMTATFactoryRoot.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/core/ContractVersion.sol [Line: 2](../../../contracts/modules/core/ContractVersion.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/deployment/CMTATLightBeaconFactoryBase.sol [Line: 2](../../../contracts/modules/deployment/CMTATLightBeaconFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/deployment/CMTATLightTPFactoryBase.sol [Line: 2](../../../contracts/modules/deployment/CMTATLightTPFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/deployment/CMTATStandardBeaconFactoryBase.sol [Line: 2](../../../contracts/modules/deployment/CMTATStandardBeaconFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/deployment/CMTATStandardTPFactoryBase.sol [Line: 2](../../../contracts/modules/deployment/CMTATStandardTPFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/deployment/CMTATUUPSFactoryBase.sol [Line: 2](../../../contracts/modules/deployment/CMTATUUPSFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/proxy/CMTATBeaconFactoryBase.sol [Line: 2](../../../contracts/modules/proxy/CMTATBeaconFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/proxy/CMTATTransparentFactoryBase.sol [Line: 2](../../../contracts/modules/proxy/CMTATTransparentFactoryBase.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/ownable/CMTAT_BEACON_FACTORY_Ownable2Step.sol [Line: 2](../../../contracts/ownable/CMTAT_BEACON_FACTORY_Ownable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/ownable/CMTAT_LIGHT_BEACON_FACTORY_Ownable2Step.sol [Line: 2](../../../contracts/ownable/CMTAT_LIGHT_BEACON_FACTORY_Ownable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/ownable/CMTAT_LIGHT_TP_FACTORY_Ownable2Step.sol [Line: 2](../../../contracts/ownable/CMTAT_LIGHT_TP_FACTORY_Ownable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/ownable/CMTAT_TP_FACTORY_Ownable2Step.sol [Line: 2](../../../contracts/ownable/CMTAT_TP_FACTORY_Ownable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/ownable/CMTAT_UUPS_FACTORY_Ownable2Step.sol [Line: 2](../../../contracts/ownable/CMTAT_UUPS_FACTORY_Ownable2Step.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_BEACON_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_BEACON_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_TP_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_TP_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/standard/CMTAT_UUPS_FACTORY.sol [Line: 2](../../../contracts/standard/CMTAT_UUPS_FACTORY.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-4: Empty Block

Consider removing empty blocks.

<details><summary>2 Found Instances</summary>


- Found in contracts/modules/access/CMTATFactoryAccessControl.sol [Line: 59](../../../contracts/modules/access/CMTATFactoryAccessControl.sol#L59)

	```solidity
	    function _authorizeDeployCMTAT()
	```

- Found in contracts/modules/access/CMTATFactoryOwnable2Step.sol [Line: 43](../../../contracts/modules/access/CMTATFactoryOwnable2Step.sol#L43)

	```solidity
	    function _authorizeDeployCMTAT() internal view virtual override onlyOwner {}
	```

</details>



## L-5: Unchecked Return

Function returns a value but it is ignored. Consider checking the return value.

<details><summary>2 Found Instances</summary>


- Found in contracts/modules/access/CMTATFactoryAccessControl.sol [Line: 33](../../../contracts/modules/access/CMTATFactoryAccessControl.sol#L33)

	```solidity
	        _grantRole(DEFAULT_ADMIN_ROLE, factoryAdmin);
	```

- Found in contracts/modules/access/CMTATFactoryAccessControl.sol [Line: 34](../../../contracts/modules/access/CMTATFactoryAccessControl.sol#L34)

	```solidity
	        _grantRole(CMTAT_DEPLOYER_ROLE, factoryAdmin);
	```

</details>



